@@ -318,15 +318,16 @@ module ActiveMerchant #:nodoc:
         add_mdd_fields(xml, options)
         add_auth_service(xml, creditcard_or_reference, options)
         add_threeds_services(xml, options)
-        add_payment_network_token(xml) if network_tokenization?(creditcard_or_reference)
         add_business_rules_data(xml, creditcard_or_reference, options)
+        add_airline_data(xml, options)
+        add_sales_slip_number(xml, options)
+        add_payment_network_token(xml) if network_tokenization?(creditcard_or_reference)
+        add_tax_management_indicator(xml, options)
         add_stored_credential_subsequent_auth(xml, options)
         add_issuer_additional_data(xml, options)
         add_partner_solution_id(xml)
         add_stored_credential_options(xml, options)
         add_merchant_description(xml, options)
-        add_sales_slip_number(xml, options)
-        add_airline_data(xml, options)
         xml.target!
       end
 
@@ -347,6 +348,7 @@ module ActiveMerchant #:nodoc:
         add_purchase_data(xml, 0, false, options)
         add_tax_service(xml)
         add_business_rules_data(xml, creditcard, options)
+        add_tax_management_indicator(xml, options)
         xml.target!
       end
 
@@ -358,8 +360,9 @@ module ActiveMerchant #:nodoc:
         add_purchase_data(xml, money, true, options)
         add_other_tax(xml, options)
         add_mdd_fields(xml, options)
-        add_capture_service(xml, request_id, request_token)
+        add_capture_service(xml, request_id, request_token, options)
         add_business_rules_data(xml, authorization, options)
+        add_tax_management_indicator(xml, options)
         add_issuer_additional_data(xml, options)
         add_merchant_description(xml, options)
         add_partner_solution_id(xml)
@@ -375,18 +378,22 @@ module ActiveMerchant #:nodoc:
         add_threeds_2_ucaf_data(xml, payment_method_or_reference, options)
         add_decision_manager_fields(xml, options)
         add_mdd_fields(xml, options)
-        add_sales_slip_number(xml, options)
-        add_airline_data(xml, options)
         if (!payment_method_or_reference.is_a?(String) && card_brand(payment_method_or_reference) == 'check') || reference_is_a_check?(payment_method_or_reference)
           add_check_service(xml)
+          add_airline_data(xml, options)
+          add_sales_slip_number(xml, options)
+          add_tax_management_indicator(xml, options)
           add_issuer_additional_data(xml, options)
           add_partner_solution_id(xml)
           options[:payment_method] = :check
         else
           add_purchase_service(xml, payment_method_or_reference, options)
           add_threeds_services(xml, options)
-          add_payment_network_token(xml) if network_tokenization?(payment_method_or_reference)
           add_business_rules_data(xml, payment_method_or_reference, options)
+          add_airline_data(xml, options)
+          add_sales_slip_number(xml, options)
+          add_payment_network_token(xml) if network_tokenization?(payment_method_or_reference)
+          add_tax_management_indicator(xml, options)
           add_stored_credential_subsequent_auth(xml, options)
           add_issuer_additional_data(xml, options)
           add_partner_solution_id(xml)
@@ -478,6 +485,7 @@ module ActiveMerchant #:nodoc:
         end
         add_subscription_create_service(xml, options)
         add_business_rules_data(xml, payment_method, options)
+        add_tax_management_indicator(xml, options)
         xml.target!
       end
 
@@ -490,6 +498,7 @@ module ActiveMerchant #:nodoc:
         add_subscription(xml, options, reference)
         add_subscription_update_service(xml, options)
         add_business_rules_data(xml, creditcard, options)
+        add_tax_management_indicator(xml, options)
         xml.target!
       end
 
@@ -552,12 +561,14 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_merchant_descriptor(xml, options)
-        return unless options[:merchant_descriptor] || options[:user_po] || options[:taxable]
+        return unless options[:merchant_descriptor] || options[:user_po] || options[:taxable] || options[:reference_data_code] || options[:invoice_number]
 
         xml.tag! 'invoiceHeader' do
           xml.tag! 'merchantDescriptor', options[:merchant_descriptor] if options[:merchant_descriptor]
           xml.tag! 'userPO', options[:user_po] if options[:user_po]
           xml.tag! 'taxable', options[:taxable] if options[:taxable]
+          xml.tag! 'referenceDataCode', options[:reference_data_code] if options[:reference_data_code]
+          xml.tag! 'invoiceNumber', options[:invoice_number] if options[:invoice_number]
         end
       end
 
@@ -591,12 +602,20 @@ module ActiveMerchant #:nodoc:
         end
       end
 
+      def add_tax_management_indicator(xml, options)
+        return unless options[:tax_management_indicator]
+
+        xml.tag! 'taxManagementIndicator', options[:tax_management_indicator] if options[:tax_management_indicator]
+      end
+
       def add_purchase_data(xml, money = 0, include_grand_total = false, options = {})
         xml.tag! 'purchaseTotals' do
           xml.tag! 'currency', options[:currency] || currency(money)
           xml.tag!('discountManagementIndicator', options[:discount_management_indicator]) if options[:discount_management_indicator]
           xml.tag!('taxAmount', options[:purchase_tax_amount]) if options[:purchase_tax_amount]
           xml.tag!('grandTotalAmount', localized_amount(money.to_i, options[:currency] || default_currency)) if include_grand_total
+          xml.tag!('originalAmount', options[:original_amount]) if options[:original_amount]
+          xml.tag!('invoiceAmount', options[:invoice_amount]) if options[:invoice_amount]
         end
       end
 
@@ -665,6 +684,7 @@ module ActiveMerchant #:nodoc:
         return unless options[:local_tax_amount] || options[:national_tax_amount] || options[:national_tax_indicator]
 
         xml.tag! 'otherTax' do
+          xml.tag! 'vatTaxRate', options[:vat_tax_rate] if options[:vat_tax_rate]
           xml.tag! 'localTaxAmount', options[:local_tax_amount] if options[:local_tax_amount]
           xml.tag! 'nationalTaxAmount', options[:national_tax_amount] if options[:national_tax_amount]
           xml.tag! 'nationalTaxIndicator', options[:national_tax_indicator] if options[:national_tax_indicator]
@@ -710,6 +730,7 @@ module ActiveMerchant #:nodoc:
               xml.tag!('commerceIndicator', indicator) if indicator
             end
             xml.tag!('reconciliationID', options[:reconciliation_id]) if options[:reconciliation_id]
+            xml.tag!('mobileRemotePaymentType', options[:mobile_remote_payment_type]) if options[:mobile_remote_payment_type]
           end
         end
       end
@@ -816,10 +837,11 @@ module ActiveMerchant #:nodoc:
         end
       end
 
-      def add_capture_service(xml, request_id, request_token)
+      def add_capture_service(xml, request_id, request_token, options)
         xml.tag! 'ccCaptureService', { 'run' => 'true' } do
           xml.tag! 'authRequestID', request_id
           xml.tag! 'authRequestToken', request_token
+          xml.tag! 'gratuityAmount', options[:gratuity_amount] if options[:gratuity_amount]
           xml.tag! 'reconciliationID', options[:reconciliation_id] if options[:reconciliation_id]
         end
       end
@@ -939,6 +961,7 @@ module ActiveMerchant #:nodoc:
           xml.tag!('planType', options[:installment_plan_type]) if options[:installment_plan_type]
           xml.tag!('firstInstallmentDate', options[:first_installment_date]) if options[:first_installment_date]
           xml.tag!('annualInterestRate', options[:installment_annual_interest_rate]) if options[:installment_annual_interest_rate]
+          xml.tag!('gracePeriodDuration', options[:installment_grace_period_duration]) if options[:installment_grace_period_duration]
         end
       end
 
