@@ -27,6 +27,7 @@
 * IPG: Add support for passing in `store_id` on transactions [aenand] #4619
 * Adyen: Field support for Level 2 and level 3 information [sainterman] #4617
 * Add alternate alpha2 country code for Kosovo [jcreiff] #4622
+* CyberSource: Add support for several fields [rachelkirk] #4623
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
